--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,9 @@ display: block;
 border-radius: 25px;
 text-align: center;
 }
+
 h2 {
     font-size: 25px;
-    display: block;
     margin-left: 5px;
 }
 p {
@@ -45,4 +45,5 @@ p {
     font-size: 13px;
     margin-left: 5px;
     margin-bottom: 30px;
+    color: #69696a;
 }
