--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ h1 {
     font-size: 14px;
     margin-bottom: 5px;
     padding-left: 5px;
+    color: #000;
+
 }
 ul {
     padding: 0;
@@ -38,6 +40,7 @@ text-align: center;
 h2 {
     font-size: 25px;
     margin-left: 5px;
+    color: #000;
 }
 p {
     border-left: 2px solid #69696a;
