--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@ li {
     list-style: none;
     color: #69696a;
     font-size: 13px;
-    padding: 3px;
-    margin-left: 3px; 
+    margin-left: 5px; 
+    margin-bottom: 5px;
 }
 
 a {
