--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ h1 {
 
 }
 ul {
-    padding: 0;
+    padding: 0;         
     margin: 0;
     list-style: none;
 }
@@ -28,8 +28,9 @@ a {
     font-size: 13px;
 
 }
+
 .button {
-padding: 9px;
+padding: 7px;
 background-color: #000;
 color: #fff;
 display: block;
@@ -49,4 +50,79 @@ p {
     margin-left: 5px;
     margin-bottom: 30px;
     color: #69696a;
+}
+/* DESKTOP VIEW */
+@media only screen and (min-width: 768px) {
+
+/* header content */
+
+header { 
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    }
+
+ul {
+    display: flex;
+    align-items: center;
+}
+.button {
+    padding: 6px 10px;
+    font-size: 10px;
+    justify-content: center;
+}
+
+/* main content */
+
+main {
+    width: 50%;
+    position: relative;
+    top:70px;
+}
+
+
+/* circles  */
+
+
+.large-child {
+    background-color: rgba(247, 136, 167, 0.6);
+    border-radius: 600%;
+    width: 200px;
+    height: 200px;
+    position: absolute;
+    right: 65px;
+    top: 150px;
+  }
+  .medium-child {
+    background-color: rgba(247, 193, 162, 0.7);
+    border-radius: 600%;
+    width: 140px;
+    height: 140px;
+    opacity: 80%;
+    position: absolute;
+    right: 10px;
+    top: 260px;
+    z-index: 2;
+  }
+  .small-child {
+    background-color: rgba(207, 130, 213, 0.6);
+    border-radius: 600%;
+    width: 100px;
+    height: 100px;
+    opacity: 70%;
+    position: absolute;
+    right: 20px;
+    top: 190px;
+  }
+
+  /* bottom button */
+
+  .bottom {
+    position: fixed;
+    left: 50%;
+    bottom: 10px;
+    transform: translateX(-50%);
+  }
+
 }
